# apps/api/src/app.module.ts
@@ -11,6 +11,8 @@ import { JobOrdersModule } from './job-orders/job-orders.module';
 import { ConsultantsModule } from './consultants/consultants.module';
 import { RolesModule } from './roles/roles.module';
 import { PermissionsModule } from './permissions/permissions.module';
+import { IndustriesModule } from './industries/industries.module';
+import { SpecializationsModule } from './specializations/specializations.module';
 import { AllExceptionsFilter } from './common/all-exceptions.filter';
 import { AuthModule } from './auth/auth.module';
 import { AuditModule } from './audit/audit.module';
@@ -27,6 +29,8 @@ import { AuditModule } from './audit/audit.module';
     ConsultantsModule,
     RolesModule,
     PermissionsModule,
+    IndustriesModule,
+    SpecializationsModule,
     AuditModule,
   ],
   controllers: [HealthController],
